# teacher

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  config.py  main.py  pyproject.toml  sqlc.yaml
admin/: routes.py
auth/: routes.py
auth/helpers/: jwt.py  password.py
db/migrations/: 0001_init.sql  0002_uuid.sql  0003_files.sql  0004_study_materials.sql  0005_materials_topics.sql  0006_users.sql  0007_users_constraints.sql  0008_tests.sql  0009_test_results.sql  0010_students_works.sql
materials/: routes.py
models/: file.py  material.py  material_file.py  test.py  test_result.py  user.py  user_test_result.py  user_work.py  work.py
repository/: models.py  users.py
sends/: routes.py
static/css/: auth.css  index.css  page.css  styles.css  test.css  variables.css
static/js/: tests.js  topic.js
templates/: account.html  admin.html  admin_login.html  filter_form.html  footer.html  header.html  index.html  login.html  materials.html  register.html  results.html  sent.html  test.html  test_results.html  tests.html
tests/: parser.py  routes.py
tests/cases/: test2.txt
tests/helpers/: test_json.py
tests/parser/: parser.py  test1.json  test2.json
tests/parser/cases/: test1.txt
